--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-JDBC_DATABASE_URL=jdbc:mysql://crossover.proxy.rlwy.net:50799/railway
+JDBC_DATABASE_URL=jdbc:mysql://trolley.proxy.rlwy.net:48979/railway
 JDBC_DATABASE_USERNAME=root
-JDBC_DATABASE_PASSWORD=lvfolLBlygNjeCtrmXSSrpZClIVTWlhb
+JDBC_DATABASE_PASSWORD=TNLCDZdLLNErqJckOusdFAqFdwOCyzFM
 
 EMAIL_USERNAME=your_email@domain.com
 EMAIL_PASSWORD=your_email_password
