--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-JDBC_DATABASE_URL=jdbc:mysql://trolley.proxy.rlwy.net:48979/railway
+JDBC_DATABASE_URL=jdbc:mysql://root:TNLCDZdLLNErqJckOusdFAqFdwOCyzFM@trolley.proxy.rlwy.net:48979/railway
 JDBC_DATABASE_USERNAME=root
 JDBC_DATABASE_PASSWORD=TNLCDZdLLNErqJckOusdFAqFdwOCyzFM
 
